fix: connexion a la db et crud fonctionel
